# argus

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: pr-title.yml
src/argus/: __init__.py  auth.py  channels.py  config.py  database.py  discord.py  health.py  main.py  scheduler.py  timeutil.py
src/argus/dashboard/: queries.py  router.py
src/argus/dashboard/templates/: _base.html  event.html  index.html  webhook_logs.html
src/argus/kktix/: handler.py  report.py  router.py  scraper.py
tests/: conftest.py  test_auth.py  test_channels.py  test_config.py  test_dashboard_queries.py  test_dashboard_router.py  test_discord.py  test_discord_delta.py  test_discord_format_manual.py  test_event_enrichment.py  test_health.py  test_kktix.py  test_timeutil.py  test_webhook.py
